@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST database_cleaner-0.4.2.gem 12288 RMD160 a332edf4a5d231988024f8778dc2e985902d0572 SHA1 335835f90bbfc1a917dceb4e7e2aa91e4b90dcfe SHA256 ee23d57897e4e87d638b5e31017bfd120036528e2c74cd1393b2828a990da12c
+DIST database_cleaner-0.4.3.gem 12288 RMD160 cb32cb04a0dfbca0d1baf2d88b06692891b3e89c SHA1 54058e4cad3f7481ee89fcbab67c5e53154c66f9 SHA256 23a0ec31b336a50472359e55ea02de1f6bc1f792393984975a492195dd4130b0
 EBUILD database_cleaner-0.4.2.ebuild 658 RMD160 656d26885e9d2f3f3f92923ab88334139386e0de SHA1 af032243874ad2d5f846f4de9cdf205285bce404 SHA256 afc19cd7d20cdf592227a594def5ab141d7c0de2763d1decaac4bdaa9618318f
-MISC ChangeLog 946 RMD160 ae7879da5177bdf75eb298861cc3e18de8829bdf SHA1 ad471565f74b09a83af031b35934e4fed063c31a SHA256 9ce33feb96f7b8dbfbd0d380cbfc2227b2b0eec1a8cb1f975032824b1b186372
+EBUILD database_cleaner-0.4.3.ebuild 658 RMD160 656d26885e9d2f3f3f92923ab88334139386e0de SHA1 af032243874ad2d5f846f4de9cdf205285bce404 SHA256 afc19cd7d20cdf592227a594def5ab141d7c0de2763d1decaac4bdaa9618318f
+MISC ChangeLog 1139 RMD160 75b84311a996ba4a1c0cb416f7d09e919dd9aff4 SHA1 7c760952b94e4e259ec92793512864244d0f503c SHA256 55611402d5584eb477653b4aa5ecc79ef657c89a1e7323af59ae2086c5e73eb2
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktxMxgACgkQeM7EJeUH71MnuwCeMv+dmL6mDJogspPchl++qwn1
-dzQAmwXGDNTdFw86OGtR9EukhJkC0LP8
-=rld+
+iEYEARECAAYFAktxM40ACgkQeM7EJeUH71N1kQCeMuQg26DBg/P6Ko6fM6jSIf2W
+DYQAn1FVHos7TuDQP5WML+t1avMlexzq
+=n9a4
 -----END PGP SIGNATURE-----
