@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*database_cleaner-0.4.3 (09 Feb 2010)
+
+  09 Feb 2010; Hans de Graaff <graaff@gentoo.org>
+  +database_cleaner-0.4.3.ebuild:
+  Version bump: Truncation for ActiveRecord oracle_enhanced adapter.
+
   09 Feb 2010; Hans de Graaff <graaff@gentoo.org>
   -database_cleaner-0.2.3.ebuild, -database_cleaner-0.4.0.ebuild:
   Remove old versions.
